; ModuleID = '/home/carl/AnghaBench/redcarpet/ext/redcarpet/extr_rc_render.c_rndr_autolink.c'
source_filename = "/home/carl/AnghaBench/redcarpet/ext/redcarpet/extr_rc_render.c_rndr_autolink.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.buf = type { i32 }

@.str = private unnamed_addr constant [9 x i8] c"autolink\00", align 1
@MKDA_NORMAL = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [4 x i8] c"url\00", align 1
@.str.2 = private unnamed_addr constant [6 x i8] c"email\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.buf*, %struct.buf*, i32, i8*)* @rndr_autolink to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rndr_autolink(%struct.buf* %0, %struct.buf* %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.buf*, align 8
  %7 = alloca %struct.buf*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  store %struct.buf* %0, %struct.buf** %6, align 8
  store %struct.buf* %1, %struct.buf** %7, align 8
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  %10 = load %struct.buf*, %struct.buf** %7, align 8
  %11 = call i32 @buf2str(%struct.buf* %10)
  %12 = load i32, i32* %8, align 4
  %13 = load i32, i32* @MKDA_NORMAL, align 4
  %14 = icmp eq i32 %12, %13
  br i1 %14, label %15, label %17

15:                                               ; preds = %4
  %16 = call i32 @CSTR2SYM(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0))
  br label %19

17:                                               ; preds = %4
  %18 = call i32 @CSTR2SYM(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0))
  br label %19

19:                                               ; preds = %17, %15
  %20 = phi i32 [ %16, %15 ], [ %18, %17 ]
  %21 = call i32 @SPAN_CALLBACK(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32 2, i32 %11, i32 %20)
  %22 = load i32, i32* %5, align 4
  ret i32 %22
}

declare dso_local i32 @SPAN_CALLBACK(i8*, i32, i32, i32) #1

declare dso_local i32 @buf2str(%struct.buf*) #1

declare dso_local i32 @CSTR2SYM(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
